--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ rich==12.4.4
 pymongo[srv]
 requests
 bs4
-python-decouple
-pandas
-wandb
+python-decouple==3.6
+pandas==1.1.5
+wandb==0.12.17
+importlib-resources
+sklearn
+tensorflow-data-validation==1.3.0
+tensorflow_estimator
