--- a/.github/workflows/data-validation.yml
+++ b/.github/workflows/data-validation.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install sklearn
-          pip install tensorflow-data-validation[visualization]
+          pip install scikit-learn
+
       - name: Login wandb
         run: wandb login ${{ secrets.WANDB_KEY}}
       - name: test data validation
