--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ python-decouple==3.6
 pandas==1.1.5
 wandb==0.12.17
 importlib-resources
+sklearn
 tensorflow-data-validation==1.3.0
 tensorflow_estimator
 category-encoders==2.5.0
