--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ sklearn
 tensorflow-data-validation==1.3.0
 tensorflow_estimator
 category-encoders==2.5.0
+streamlit
+fastapi
+# "uvicorn[standard]"
